--- a/index.html
+++ b/index.html
@@ -1,7 +1,5 @@
 <!DOCTYPE html>
 <html lang="en">
-
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -9,8 +7,6 @@
     rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <script src="https://kit.fontawesome.com/26dd937286.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" type="text/css" href="styles.css">
-</head>
-
     <title>Formulario con HTML5</title>
 </head>
 
@@ -28,11 +24,11 @@
                       <div class="row mt-4">
                         <div class="col-sm-5 pb-3">
                             <label for="carta">Carta #</label> 
-                            <input class="form-control" placeholder="XXXXXXXXXXXXXXXX" type="number">
+                            <input class="form-control" placeholder="XXXXXXXXXXXXXXXX" type="number" id="carta">
                         </div>
                         <div class="col-sm-3 pb-3">
                             <label for="cvc">CVC #</label> 
-                            <input class="form-control" placeholder="0000" type="number">
+                            <input class="form-control" placeholder="0000" type="number" id="cvc">
                         </div>
                         <div class="col-sm-4 pb-3">
                             <label for="total">Total</label>
@@ -40,22 +36,23 @@
                                 <div class="input-group-addon">
                                     <i class="fas fa-dollar-sign"></i>
                                 </div>
-                                <input class="form-control" placeholder="Total" type="number">
+                                <input class="form-control" placeholder="Total" type="number" id="total">
                             </div>
                         </div>
                         <div class="col-sm-6 pb-3">
                             <label for="nombre">Primer Nombre</label> 
-                            <input class="form-control" type="text">
+                            <input class="form-control" type="text" id="nombre">
                         </div>
                         <div class="col-sm-6 pb-3">
                             <label for="apellido">Apellido</label> 
-                            <input class="form-control" type="text">
+                            <input class="form-control" type="text" id="apellido">
                         </div>
                         <div class="col-sm-6 pb-3">
-                            <label for="ciudad">Ciudad</label> <input class="form-control" type="text">
+                            <label for="ciudad">Ciudad</label> 
+                            <input class="form-control" type="text" id="ciudad">
                         </div>
                         <div class="col-sm-3 pb-3">
-                            <label for="estado">Estado</label> <select class="form-control custom-select">
+                            <label for="estado">Estado</label> <select class="form-control custom-select" id="estado">
                             <option class="text-white bg-warning">
                             Selecciona un Estado</option>
                             <option value="AZ">
@@ -131,7 +128,7 @@
                         </div>
                         <div class="col-sm-3 pb-3">
                             <label for="codigoPostal">Codigo Postal</label> 
-                            <input class="form-control" type="number">
+                            <input class="form-control" type="number" id="codigoPostal">
                         </div>
                         <div class="col-md-6 pb-3">
                             <p>Aceptamos:</p>
@@ -156,7 +153,7 @@
                         </div>
                         <div class="col-md-6 pb-3">
                             <label for="mensaje">Mensaje</label> 
-                            <textarea class="form-control" rows="3"></textarea> 
+                            <textarea class="form-control" rows="3" id="mensaje"></textarea> 
                             <small class="text-muted">Agregar cualquier nota aca.</small>
                         </div>
                     </div>
